Publishing to gh-pages

--- a/slack/index.html
+++ b/slack/index.html
@@ -64,7 +64,7 @@
     
     <li>
       <span class="date">February 4, 2019</span>
-      <a class="title" href="https://pages.git.target.com/target-chatops/chatops-docs/slack/terms_of_service/">Terms of Service</a>
+      <a class="title" href="https://pages.git.target.com/target-chatops/chatops-docs/slack/terms_of_service/">Target &#43; Slack Terms and Conditions</a>
     </li>
     
   </ul>
