--- a/slack/terms_of_service/index.html
+++ b/slack/terms_of_service/index.html
@@ -10,15 +10,15 @@
     
 
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Terms of Service"/>
-<meta name="twitter:description" content="Slack Terms &amp; Conditions The Terms of Service provides Team Members, Contractors, and Third Parties with Chatops-specific usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies.
+<meta name="twitter:title" content="Target &#43; Slack Terms and Conditions"/>
+<meta name="twitter:description" content="The Terms of Service provides Team Members, Contractors, and Third Parties with Chatops-specific usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies.
 These terms and conditions apply to all Target Slack users as follows:
 Team Members, Contractors, and Contingent Workers Slack use is governed by the Acceptable Use of Information Resources Policy and the Confidentiality – Company Systems and Property Policy."/>
 
 
     <base href="https://pages.git.target.com/target-chatops/chatops-docs/slack/terms_of_service/">
     <title>
-  Terms of Service · Target &#43; Slack
+  Target &#43; Slack Terms and Conditions · Target &#43; Slack
 </title>
 
     <link rel="canonical" href="https://pages.git.target.com/target-chatops/chatops-docs/slack/terms_of_service/">
@@ -62,14 +62,12 @@ Team Members, Contractors, and Contingent Workers Slack use is governed by the A
   <section class="container page">
   <article>
     <header>
-      <h1>Terms of Service</h1>
+      <h1>Target &#43; Slack Terms and Conditions</h1>
     </header>
 
     
 
-<h1 id="slack">Slack</h1>
-
-<h2 id="terms-conditions">Terms &amp; Conditions</h2>
+<p><img src="images/avatar.jpg" alt="Target Bullseye" /></p>
 
 <p>The Terms of Service provides Team Members, Contractors, and Third Parties with Chatops-specific usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies.</p>
 
