Publishing to gh-pages

--- a/slack/terms_of_service/index.html
+++ b/slack/terms_of_service/index.html
@@ -10,15 +10,15 @@
     
 
     <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Target &#43; Slack Terms and Conditions"/>
-<meta name="twitter:description" content="The Terms of Service provides Team Members, Contractors, and Third Parties with Chatops-specific usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies.
+<meta name="twitter:title" content="Target &#43; Slack"/>
+<meta name="twitter:description" content="Terms &amp; Conditions The Terms of Service provides Team Members, Contractors, and Third Parties with Chatops-specific usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies.
 These terms and conditions apply to all Target Slack users as follows:
 Team Members, Contractors, and Contingent Workers Slack use is governed by the Acceptable Use of Information Resources Policy and the Confidentiality – Company Systems and Property Policy."/>
 
 
     <base href="https://pages.git.target.com/target-chatops/chatops-docs/slack/terms_of_service/">
     <title>
-  Target &#43; Slack Terms and Conditions · Target &#43; Slack
+  Target &#43; Slack · Target &#43; Slack
 </title>
 
     <link rel="canonical" href="https://pages.git.target.com/target-chatops/chatops-docs/slack/terms_of_service/">
@@ -62,12 +62,14 @@ Team Members, Contractors, and Contingent Workers Slack use is governed by the A
   <section class="container page">
   <article>
     <header>
-      <h1>Target &#43; Slack Terms and Conditions</h1>
+      <h1>Target &#43; Slack</h1>
     </header>
 
     
 
-<p><img src="images/avatar.jpg" alt="Target Bullseye" /></p>
+<p><img src="./images/avatar.jpg" alt="Target Bullseye" /></p>
+
+<h1 id="terms-conditions">Terms &amp; Conditions</h1>
 
 <p>The Terms of Service provides Team Members, Contractors, and Third Parties with Chatops-specific usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies.</p>
 
