Publishing to gh-pages

--- a/slack/terms_of_service/index.html
+++ b/slack/terms_of_service/index.html
@@ -67,7 +67,7 @@ Team Members, Contractors, and Contingent Workers Slack use is governed by the A
 
     
 
-<p><img src="./images/avatar.jpg" alt="Target Bullseye" /></p>
+<p><img src="images/avatar.jpg" alt="Target Bullseye" /></p>
 
 <h1 id="terms-conditions">Terms &amp; Conditions</h1>
 
