Publishing to gh-pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="avatar"><img src="https://pages.git.target.com/target-chatops/chatops-docs/images/avatar.jpg" alt="avatar"></div>
     
     <h1>Target</h1>
-    <h2><a href="https://pages.git.target.com/target-chatops/chatops-docs/slack/terms_of_service/">Slack Terms of Service</a></h2>
+    <h2><a href="https://target.github.io/chatops-docs/slack/terms_of_service/">Slack Terms of Service</a></h2>
   </div>
 </section>
 
