Terms of Service Updated with new content.

--- a/slack/terms_of_service/index.html
+++ b/slack/terms_of_service/index.html
@@ -11,9 +11,8 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Terms &amp; Conditions"/>
-<meta name="twitter:description" content="The Terms of Service provides Team Members, Contractors, and Third Parties with Chatops-specific usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies.
-These terms and conditions apply to all Target Slack users as follows:
-Team Members, Contractors, and Contingent Workers Slack use is governed by the Acceptable Use of Information Resources Policy and the Confidentiality – Company Systems and Property Policy."/>
+<meta name="twitter:description" content="he Terms of Service provides Team Members, Contractors, and Third Parties with usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies and Expectations. These terms and conditions apply to all Target Slack users as follows:
+Team Members, Contractors, and Contingent Workers Slack use is governed by the Acceptable Use of Information Resources Policy. It is your responsibility to understand and apply the Policy to your use of Slack and other Target applications"/>
 
 
     <base href="https://target.github.io/chatops-docs/slack/terms_of_service/">
@@ -69,34 +68,32 @@ Team Members, Contractors, and Contingent Workers Slack use is governed by the A
 
 <p><img src="images/target_slack_logo.png" alt="Target Bullseye and Slack logos" /></p>
 
-<p>The Terms of Service provides Team Members, Contractors, and Third Parties with Chatops-specific usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies.</p>
+<p>The Terms of Service provides Team Members, Contractors, and Third Parties with usage responsibilities. It does not replace or supersede any existing Target policies and all users are required to adhere to all Target Policies and Expectations.</p>
 
 <p>These terms and conditions apply to all Target Slack users as follows:</p>
 
 <h4 id="team-members-contractors-and-contingent-workers">Team Members, Contractors, and Contingent Workers</h4>
 
-<p>Slack use is governed by the Acceptable Use of Information Resources Policy and the Confidentiality – Company Systems and Property Policy.  It is your responsibility to understand and apply the Polices to your use of Slack and other Target applications. Failure to comply with the Policies may result in disciplinary action, up to and including immediate termination of employment or assignment.
-Reminder:  Non-exempt team members must be paid for all time worked. You must log in to myTime and record all time worked, including time spent logging in to the system, as appropriate.</p>
+<p>Slack use is governed by the Acceptable Use of Information Resources Policy. It is your responsibility to understand and apply the Policy to your use of Slack and other Target applications. Failure to comply with the Policy may result in disciplinary action, up to and including immediate termination of employment or assignment.</p>
+<p>Reminder: Non-exempt team members must be paid for all time worked. You must log in to myTime and record all time worked, including time spent logging in to the system, as appropriate.</p>
 
 <h4 id="third-party-vendor-partners">Third Party (Vendor) Partners</h4>
 
-<p>Access to and use of Target’s information and information resources, including Slack, is governed by the terms of the contract, non-disclosure agreement (NDA), and/or Master Services Agreement (MSA) between Target and the third party.  Non-compliance with these agreements may result in revocation of access and re-evaluation of existing contracts. Slack at Target is confined to business use only.</p>
+<p>Access to and use of Target’s information and information resources, including Slack, is governed by the terms of the contract, non-disclosure agreement (NDA), and/or Master Services Agreement (MSA) between Target and the third party. Non-compliance with these agreements may result in revocation of access and re-evaluation of existing contracts. Slack at Target is confined to business use only.</p>
 
 <h4 id="team-member-and-contractor-candidates">Team Member and Contractor Candidates</h4>
 
-<p>Access to and use of Target’s information and information resources, including Slack, is temporary and conditional during the candidate interview process.  Slack at Target is confined to business use only.</p>
+<p>Access to and use of Target’s information and information resources, including Slack, is temporary and conditional during the candidate interview process. Slack at Target is confined to business use only.</p>
 
 <h2 id="code-of-conduct">Code of Conduct</h2>
 
-<p>At Target, we use Slack as our Chatops platform. For the purposes of this document, “Slack” and “Chatops platform” are functionally equivalent.</p>
+<p style="color: red;"><b>Slack is for public and internal data only. You may not share Target Intellectual Property such as Business plans, Strategic initiatives, Guest data, etc.</b></p>
+<p><b>As a member of Target’s Slack community, you are ultimately responsible and accountable for your conduct in the community at-large.</b> The expectations around communication and messaging with other members of the community via Slack are the same as they are for communicating in-person, via email, or via other collaboration/messaging tools provided by Target.</p>
 
-<p>Slack is for internal and public data only. You may not share Target Intellectual Property such Business plans, Strategic initiatives, Guest data, etc.</p>
-
-<p>As a member of Target’s Chatops community, you are ultimately responsible and accountable for your conduct in the community at-large. The expectations around communication and messaging with other members of the community via Slack are the same as they are for communicating in-person, via email, or via other collaboration/messaging tools provided by Target.</p>
-
-<p>For specific details related to expectations of conduct for Chatops users, please refer to Target’s Corporate Policies.</p>
+<p>For specific details related to expectations, please refer to <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies">Target’s Corporate Policies</a>.</p>
 
 <p>Any report of potential violations of Target’s Corporate Policies and/or Business Conduct Guide - also known as “unacceptable conduct” - will be investigated. Corrective action will be taken, up to and including termination.</p>
+<p>Community members are encouraged to self-moderate the channels that they belong to, and to report any problems to Slack administrators or other appropriate individuals (e.g., your manager).</p>
 
 <h2 id="requirements-guidelines-and-etiquette">Requirements, Guidelines, and Etiquette</h2>
 
@@ -105,16 +102,15 @@ Reminder:  Non-exempt team members must be paid for all time worked. You must lo
 <h4 id="requirements">Requirements</h4>
 
 <ol>
-<li>Do not actively troll, brigade (to ‘gang up’ on someone or a group of people, regardless of purpose - humor, actual malicious intent, etc), or otherwise act in an unsavory, questionable, or offensive manner.
-
+  <li><b>Do not</b> actively troll, brigade (to ‘gang up’ on someone or a group of people, regardless of purpose - humor, actual malicious intent, etc), or otherwise act in an unsavory, questionable, or offensive manner.
 <ul>
-<li>Be a good neighbor and positive participant in the community. All users are required to adhere to Target’s Harassment Free Workplace Policy.</li>
+<li>Be a good neighbor and positive participant in the community. All users are required to adhere to <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/SitePages/Equal-Employment-Opportunity-Policy.aspx?web=1">Target’s Harassment Free Workplace Policy</a>.</li>
 <li>Any report of potential violations will be investigated. If an investigation determines a violation has occurred, Target will take prompt and appropriate corrective action, up to and including termination.</li>
 </ul></li>
-<li>You are required to adhere to Target Security practices. See Target’s Information Security guidelines for more information. You can also ask in the #slack-help or #security-help channels.</li>
-<li>Do not post Confidential or SHR data in Slack. This includes credentials, tokens, secrets, or other sensitive information.</li>
-<li>Slack is approved to handle public and internal data only. Do not use Slack to share Target Intellectual Property such as business plans, strategic initiatives, etc.</li>
-<li>Do not use Slack as a file-share alternative.</li>
+<li>You are required to adhere to Target Security practices. See <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/SitePages/Information-Security-Policy.aspx?web=1">Target’s Information Security Policy</a> for more information. You can also ask in the #slack-help or #security-help channels.</li>
+<li><b>Do not</b> post Confidential or SHR data in Slack. This includes credentials, tokens, secrets, or other sensitive information. See the <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/SitePages/Acceptable-Use-of-Information-Resources.aspx?web=1">Acceptable Use of Information Resources Policy</a> for additional information on what can/can't be posted in Slack.</li>
+  <li>Slack is approved to handle public and internal data only. <b>Do not</b> use Slack to share Target Intellectual Property such as business plans, strategic initiatives, etc.</li>
+  <li><b>Do not</b> use Slack as a file-share alternative. Leverage the <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/Policies/Forms/AllItems.aspx?id=/sites/CorporatePolicies/Policies/Where%20to%20Share%20Guide.pdf&parent=/sites/CorporatePolicies/Policies">Where to Share</a> guide for approved tools.</li>
 <li>Be a good steward of the Slack platform. Help guide others to adhere to these guidelines and let the Slack Admins, or other appropriate personnel, know if you come across something that violates these guidelines or is concerning.</li>
 </ol>
 
@@ -123,7 +119,7 @@ Reminder:  Non-exempt team members must be paid for all time worked. You must lo
 <ul>
 <li>While a certain amount chit-chat and “watercooler” talk is reasonable, remember that the primary purpose of Slack is to facilitate your work at Target and interaction with others at Target. While Slack has gained adoption and is approved for use at Target, that approval can be rescinded if Slack is used in ways that don’t adhere to Target’s code of conduct and corporate policies.</li>
 <li>Use your judgement (and Target’s Corporate Policies) when considering posting content that may be off-topic, questionable, inflammatory, or objectionable.</li>
-<li>When in doubt, if you would not say what you’re considering posting aloud in the office, do not post it on Slack.</li>
+<li>When in doubt, <b>if you would not say what you’re considering posting aloud in the office, do not post it on Slack.</b></li>
 <li>Avoid using Slack to facilitate discussion of topics that are solely and entirely not work-related. If you would like to have a group discussion with Target team members for non-work-related reasons (e.g., coordinating camping trips, weekend happy hours, etc.), a different communication platform, such as Facebook Messenger, text messages, or WhatsApp, should be used instead.</li>
 </ul>
 
@@ -151,15 +147,9 @@ Reminder:  Non-exempt team members must be paid for all time worked. You must lo
 </span><span style=""></span>Jonny Appleseed 11:51AM: <span style="font-weight:bold">@here</span> or does anyone know who I could contact?</code></pre></div>
 <h2 id="privacy">Privacy</h2>
 
-<p>As with any computer or messaging/collaboration solution provided by Target, there is no expectation of privacy for users of the Chatops platform. The “Confidentiality – Company Systems and Property” Target policy states the following:</p>
+<p>As with any computer or messaging/collaboration solution provided by Target, there is no expectation of privacy for users of Slack. See “Target’s Rights” within the <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/SitePages/Acceptable-Use-of-Information-Resources.aspx?web=1">"Acceptable Use of Information Resources"</a> policy for details.</p>
 
-<p>Information, including messages, that is created, accessed, transmitted, or stored, or used through Target Information Resources is considered to be the sole property of Target Corporation. Team members should have no expectation that any Information, messages or material is private.</p>
-
-<p>Target Corporation reserves the right to monitor, review, retrieve, and retain Information stored on or accessed through its Information Resources and/or to disconnect, confiscate, and quarantine its Information Resources at any time.</p>
-
-<p>Specifically, whether a Slack channel is public or private, its contents (or chat history) are subject to search and review by administrators (or other Target personnel), if necessary. If you choose to access your personal Slack accounts using your corporate device(s), the contents of these chats are also subject to monitoring.</p>
-
-<p>Community members are encouraged to self-moderate the channels that they belong to, and to report any problems to Slack administrators or other appropriate individuals (e.g., your manager).</p>
+<p>Whether a Slack channel is public or private, its contents (or history) are subject to search and review by administrators (or other Target personnel), if necessary. If you choose to access your personal Slack accounts using your corporate device(s), the contents of these chats are also subject to monitoring.</p>
 
   </article>
 </section>
