--- a/slack/terms_of_service/index.html
+++ b/slack/terms_of_service/index.html
@@ -90,7 +90,7 @@ Team Members, Contractors, and Contingent Workers Slack use is governed by the A
 <p style="color: red;"><b>Slack is for public and internal data only. You may not share Target Intellectual Property such as Business plans, Strategic initiatives, Guest data, etc.</b></p>
 <p><b>As a member of Target’s Slack community, you are ultimately responsible and accountable for your conduct in the community at-large.</b> The expectations around communication and messaging with other members of the community via Slack are the same as they are for communicating in-person, via email, or via other collaboration/messaging tools provided by Target.</p>
 
-<p>For specific details related to expectations, please refer to <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies">Target’s Corporate Policies</a>.</p>
+<p>For specific details related to expectations, please refer to Target’s Corporate Policies.</p>
 
 <p>Any report of potential violations of Target’s Corporate Policies and/or Business Conduct Guide - also known as “unacceptable conduct” - will be investigated. Corrective action will be taken, up to and including termination.</p>
 <p>Community members are encouraged to self-moderate the channels that they belong to, and to report any problems to Slack administrators or other appropriate individuals (e.g., your manager).</p>
@@ -104,13 +104,13 @@ Team Members, Contractors, and Contingent Workers Slack use is governed by the A
 <ol>
   <li><b>Do not</b> actively troll, brigade (to ‘gang up’ on someone or a group of people, regardless of purpose - humor, actual malicious intent, etc), or otherwise act in an unsavory, questionable, or offensive manner.
 <ul>
-<li>Be a good neighbor and positive participant in the community. All users are required to adhere to <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/SitePages/Equal-Employment-Opportunity-Policy.aspx?web=1">Target’s Harassment Free Workplace Policy</a>.</li>
+<li>Be a good neighbor and positive participant in the community. All users are required to adhere to Target’s Harassment Free Workplace Policy.</li>
 <li>Any report of potential violations will be investigated. If an investigation determines a violation has occurred, Target will take prompt and appropriate corrective action, up to and including termination.</li>
 </ul></li>
-<li>You are required to adhere to Target Security practices. See <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/SitePages/Information-Security-Policy.aspx?web=1">Target’s Information Security Policy</a> for more information. You can also ask in the #slack-help or #security-help channels.</li>
-<li><b>Do not</b> post Confidential or SHR data in Slack. This includes credentials, tokens, secrets, or other sensitive information. See the <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/SitePages/Acceptable-Use-of-Information-Resources.aspx?web=1">Acceptable Use of Information Resources Policy</a> for additional information on what can/can't be posted in Slack.</li>
+<li>You are required to adhere to Target Security practices. See Target’s Information Security Policy for more information. You can also ask in the #slack-help or #security-help channels.</li>
+<li><b>Do not</b> post Confidential or SHR data in Slack. This includes credentials, tokens, secrets, or other sensitive information. See the Acceptable Use of Information Resources Policy for additional information on what can/can't be posted in Slack.</li>
   <li>Slack is approved to handle public and internal data only. <b>Do not</b> use Slack to share Target Intellectual Property such as business plans, strategic initiatives, etc.</li>
-  <li><b>Do not</b> use Slack as a file-share alternative. Leverage the <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/Policies/Forms/AllItems.aspx?id=/sites/CorporatePolicies/Policies/Where%20to%20Share%20Guide.pdf&parent=/sites/CorporatePolicies/Policies">Where to Share</a> guide for approved tools.</li>
+  <li><b>Do not</b> use Slack as a file-share alternative. Leverage the Where to Share guide for approved tools.</li>
 <li>Be a good steward of the Slack platform. Help guide others to adhere to these guidelines and let the Slack Admins, or other appropriate personnel, know if you come across something that violates these guidelines or is concerning.</li>
 </ol>
 
@@ -147,7 +147,7 @@ Team Members, Contractors, and Contingent Workers Slack use is governed by the A
 </span><span style=""></span>Jonny Appleseed 11:51AM: <span style="font-weight:bold">@here</span> or does anyone know who I could contact?</code></pre></div>
 <h2 id="privacy">Privacy</h2>
 
-<p>As with any computer or messaging/collaboration solution provided by Target, there is no expectation of privacy for users of Slack. See “Target’s Rights” within the <a href="https://targetonline.sharepoint.com/sites/CorporatePolicies/SitePages/Acceptable-Use-of-Information-Resources.aspx?web=1">"Acceptable Use of Information Resources"</a> policy for details.</p>
+<p>As with any computer or messaging/collaboration solution provided by Target, there is no expectation of privacy for users of Slack. See “Target’s Rights” within the "Acceptable Use of Information Resources"</a> policy for details.</p>
 
 <p>Whether a Slack channel is public or private, its contents (or history) are subject to search and review by administrators (or other Target personnel), if necessary. If you choose to access your personal Slack accounts using your corporate device(s), the contents of these chats are also subject to monitoring.</p>
 
